--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 #and choose a language from the options in the _data directory:
 title: Our Study Group
 description: "A study group."
-language: en
+language: pt
 
 #Step 2: press the green 'Commit Changes' button at the bottom of this page.
 
